--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=production
-APP_KEY=
+APP_KEY=base64:t5zp3OZ+NXsG+WEGyQL/yZKIuEOnVF6WObEwZ32RuPU=
 APP_DEBUG=false
 APP_URL=http://localhost
 
