--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=production
 APP_KEY=base64:t5zp3OZ+NXsG+WEGyQL/yZKIuEOnVF6WObEwZ32RuPU=
 APP_DEBUG=false
 APP_URL=http://localhost
+ADMIN_HTTPS=false
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -57,3 +58,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SENTRY_LARAVEL_DSN=https://90890fe11a82e9967b93494c3f30b213@o4505754264207360.ingest.sentry.io/4505754334724096
+SENTRY_TRACES_SAMPLE_RATE=1.0
+VITE_SENTRY_DSN_PUBLIC="${SENTRY_LARAVEL_DSN}"
